changed the img path to local paths in front end projects

--- a/front-end-projects/landingPage/landingPage.css
+++ b/front-end-projects/landingPage/landingPage.css
@@ -1,177 +1,181 @@
-body{
-    background: lightsteelblue !important;
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    color: #333333;
+body {
+  background: lightsteelblue !important;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  color: #333333;
 }
 ul.top-nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
-ul.top-nav li{
-    float: left;
+ul.top-nav li {
+  float: left;
 }
 ul.top-nav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 22px 20px;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 22px 20px;
+  text-decoration: none;
 }
-ul.top-nav li :hover{
-    background: #0a85ad;
+ul.top-nav li :hover {
+  background: #0a85ad;
 }
 input {
-    max-width: 300px;
-    display: inline-block !important;
+  max-width: 300px;
+  display: inline-block !important;
 }
-.toggle{
-    width: 100%;
-    padding: 10px 20px;
-    background: #001f44;
-    text-align: right;
-    box-sizing: border-box;
-    color: #ffffff;
-    font-size: 30px;
-    display: none;
+.toggle {
+  width: 100%;
+  padding: 10px 20px;
+  background: #001f44;
+  text-align: right;
+  box-sizing: border-box;
+  color: #ffffff;
+  font-size: 30px;
+  display: none;
 }
 @media (max-width: 768px) {
-    .hide-nav{
-        display: none; 
-    }
-    ul.top-nav li{
-        float: none;
-    }
-    .toggle{
-        display: block ;
-    }
-    .active{
-        display: block;
-    }
+  .hide-nav {
+    display: none;
+  }
+  ul.top-nav li {
+    float: none;
+  }
+  .toggle {
+    display: block;
+  }
+  .active {
+    display: block;
+  }
 }
-.remove-bullets{
-    list-style: none;
+.remove-bullets {
+  list-style: none;
 }
-#contact-promo{
-    display: inline;
-    vertical-align: middle;
+#contact-promo {
+  display: inline;
+  vertical-align: middle;
 }
-.logo-img{
-    float: left;
+.logo-img {
+  float: left;
 }
-.logo-text{
-    color: #000000;
-    position: relative;
+.logo-text {
+  color: #000000;
+  position: relative;
 }
-#logo{
-    width: 100%;
-    padding: 5px 10px 5px 10px;
-    background:lightslategrey;
+#logo {
+  width: 100%;
+  padding: 5px 10px 5px 10px;
+  background: lightslategrey;
 }
-.button-color{
-    background-color: #d17402;
-    color:white;
-    max-width: 100px;
+.button-color {
+  background-color: #d17402;
+  color: white;
+  max-width: 100px;
 }
 footer {
-    margin-top: 30px;
-    background-color: #001f44;
-    padding: 20px;
+  width: 100%;
+  margin-top: 30px;
+  background-color: #001f44;
+  padding: 20px;
 }
 footer > ul {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 10vw;
 }
-footer > ul > li{
-    padding: 0 10px;
-    list-style: none;
+footer > ul > li {
+  padding: 0 10px;
+  list-style: none;
 }
-footer > ul > li{
-    padding: 0 10px;
-    list-style: none;
+footer > ul > li {
+  padding: 0 10px;
+  list-style: none;
 }
-footer > ul > li > a{
-    color: white;
+footer > ul > li > a {
+  color: white;
 }
-footer > ul > li > a:hover{ 
-   color:#d17402;
-   text-decoration: none;
+footer > ul > li > a:hover {
+  color: #d17402;
+  text-decoration: none;
 }
 footer > span {
-    margin-top: 5px;
-    display: flex;
-    justify-content: flex-end;
-    font-size: 1.0em;
-    color: #ffffff;
+  margin-top: 5px;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 10vw;
+  font-size: 1em;
+  color: #ffffff;
 }
 /*Responsive Screens*/
 .video-container {
-	position: relative;
-	padding-bottom: 56.25%;
-	padding-top: 30px;
-	height: 0;
-    overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
 }
-.video-container iframe{
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 /* Small devices (landscape phones, 576px and up) */
-@media only screen and (max-width: 576px){
-    .container {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    h1,h2,h3{
-        font-size: x-large;
-    } 
-    .logo-text{
-        font-size: 28px !important;
-    } 
+@media only screen and (max-width: 576px) {
+  .container {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  h1,
+  h2,
+  h3 {
+    font-size: x-large;
+  }
+  .logo-text {
+    font-size: 28px !important;
+  }
 }
 /* Medium devices (tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-    .container{
-        margin-top: 20px;
-        margin-bottom: 20px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-   
+  .container {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 /* weird */
-@media  (max-width: 991px){
-    .container{
-        margin-top: 20px;
-        margin-bottom: 20px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+@media (max-width: 991px) {
+  .container {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 /* Large devices (desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-    .container{
-        margin-top: 20px;
-        margin-bottom: 20px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+  .container {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 /* Extra large devices (large desktops, 1200px and up) */
-@media only screen and (min-width: 1200px){
-    .container{
-        margin-top: 30px;
-        margin-bottom: 30px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+@media only screen and (min-width: 1200px) {
+  .container {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
