--- a/front-end-projects/technicalDocPage/technicalDocPage.css
+++ b/front-end-projects/technicalDocPage/technicalDocPage.css
@@ -1,56 +1,137 @@
-body{
-    background: lightsteelblue !important;
-    margin: 0;
+html,
+body {
+  min-width: 290px;
+  color: white;
+  background: #4d4e53;
+  font-family: 'Open Sans', Arial, sans-serif;
+  line-height: 1.5;
+  scroll-behavior: smooth;
+}
+
+#navbar {
+  position: fixed;
+  min-width: 290px;
+  top: 0px;
+  left: 0px;
+  width: 300px;
+  height: 100%;
+  border-right: solid;
+  border-color: teal;
+}
+
+header {
+  color: teal;
+  margin: 10px;
+  text-align: center;
+  font-size: 1.8em;
+  font-weight: thin;
+}
+
+#main-doc header {
+  text-align: left;
+  margin: 0px;
+}
+
+#navbar ul {
+  height: 88%;
+  padding: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+#navbar li {
+  color: white;
+  border-top: 1px solid;
+  list-style: none;
+  position: relative;
+  width: 100%;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#navbar li:hover {
+  background-color: teal;
+  font-size: 1.2em;
+}
+
+#navbar a {
+  display: block;
+  padding: 10px 30px;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#main-doc {
+  position: absolute;
+  margin-left: 310px;
+  padding: 20px;
+  margin-bottom: 110px;
+}
+
+section article {
+  color: white;
+  margin: 15px;
+  font-size: 0.96em;
+}
+
+section li {
+  margin: 15px 0px 0px 20px;
+}
+
+code {
+  display: block;
+  text-align: left;
+  white-space: pre;
+  position: relative;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 2;
+  background-color: black;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+@media only screen and (max-width: 815px) {
+  /* For mobile phones: */
+  #navbar ul {
+    border: 1px solid;
+    height: 207px;
+  }
+
+  #navbar {
+    background-color: white;
+    position: absolute;
+    top: 0;
     padding: 0;
-    font-family: sans-serif;
-    color: #333333;
+    margin: 0;
+    width: 100%;
+    max-height: 275px;
+    border: none;
+    z-index: 1;
+    border-bottom: 2px solid;
+  }
+
+  #main-doc {
+    position: relative;
+    margin-left: 0px;
+    margin-top: 270px;
+  }
 }
-@media (max-width: 768px) {
-}
-/*Responsive Screens*/
-/* Small devices (landscape phones, 576px and up) */
-@media only screen and (max-width: 576px){
-    .container {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-/* Medium devices (tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-    .container{
-        margin-top: 20px;
-        margin-bottom: 20px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-   
-}
-/* weird */
-@media  (max-width: 991px){
-    .container{
-        margin-top: 20px;
-        margin-bottom: 20px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-/* Large devices (desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-    .container{
-        margin-top: 20px;
-        margin-bottom: 20px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-/* Extra large devices (large desktops, 1200px and up) */
-@media only screen and (min-width: 1200px){
-    .container{
-        margin-top: 30px;
-        margin-bottom: 30px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+
+@media only screen and (max-width: 400px) {
+  #main-doc {
+    margin-left: -10px;
+  }
+
+  code {
+    margin-left: -20px;
+    width: 100%;
+    padding: 15px;
+    padding-left: 10px;
+    padding-right: 45px;
+    min-width: 233px;
+  }
 }
